tools/ingress-gce/gce-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gce_static_ip_name"
    ingress.gcp.kubernetes.io/pre-shared-cert: 'gce_cert_name'
    kubernetes.io/ingress.allow-http: "allow_http"
    cloud.google.com/service-settings: |
      {
        "prometheus.domain_name": {
          "iap": {
            "enabled": iap_enabled,
            "oauth2ClientId": "oauth_client_id",
            "oauth2ClientSecret": "oauth_client_secret"
          }
        },
        "alertmanager.domain_name": {
          "iap": {
            "enabled": iap_enabled,
            "oauth2ClientId": "oauth_clientid",
            "oauth2ClientSecret": "oauth_client_secret"
          }
        },
        "grafana.domain_name": {
          "iap": {
            "enabled": iap_enabled,
            "oauth2ClientId": "oauth_clientid",
            "oauth2ClientSecret": "oauth_client_secret"
          }
        },
      }
spec:
  backend:
    serviceName: grafana
    servicePort: 3000
  rules:
  - host: prometheus.domain_name
    http:
      paths:
      - path: /*
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090
  - host: alertmanager.domain_name
    http:
      paths:
      - path: /*
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
  - host: grafana.domain_name
    http:
      paths:
      - path: /*
        backend:
          serviceName: grafana
          servicePort: 3000
